--- a/platformio.ini
+++ b/platformio.ini
@@ -12,4 +12,8 @@
 platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
-monitor_speed=115200
+monitor_speed = 115200
+lib_deps = 
+	hieromon/AutoConnect @ ^1.2.2
+	hieromon/PageBuilder @ ^1.4.3
+	bblanchon/ArduinoJson@^6.18.0
