--- a/platformio.ini
+++ b/platformio.ini
@@ -14,6 +14,20 @@ board = esp32doit-devkit-v1
 framework = arduino
 monitor_speed = 115200
 lib_deps = 
-	hieromon/AutoConnect @ ^1.2.2
-	hieromon/PageBuilder @ ^1.4.3
 	bblanchon/ArduinoJson@^6.18.0
+	hieromon/AutoConnect@^1.2.2
+	hieromon/PageBuilder@^1.4.3
+	WiFi @ ^1.0
+	WebServer @ ^1.0
+	FS @ ^1.0
+	SPIFFS @ ^1.0
+	DNSServer @ ^1.1.0
+	Preferences @ ^1.0
+	EEPROM @ ^1.0.3
+	Ticker @ ^1.1
+	HTTPClient @ ^1.2
+	WiFiClientSecure @ ^1.0
+	HTTPUpdate @ ^1.3
+	Update @ ^1.0
+	SPI @ ^1.0
+	SD(esp32) @ ^1.0.5
