--- a/platformio.ini
+++ b/platformio.ini
@@ -10,9 +10,10 @@
 
 [env:esp32dev]
 platform = espressif32
-board = esp32doit-devkit-v1
+board = esp32doit-devkit-v1  # or lolin_d32_pro (Giannis' hardware)
 framework = arduino
 monitor_speed = 115200
+
 lib_deps = 
 	bblanchon/ArduinoJson@^6.18.0
 	hieromon/AutoConnect@^1.2.2
@@ -32,3 +33,4 @@ lib_deps =
 	SPI @ ^1.0
 	SD(esp32) @ ^1.0.5
 	waspinator/AccelStepper@^1.61
+	makerspaceleiden/MFRC522-spi-i2c-uart-async @ ^1.5.1
