--- a/platformio.ini
+++ b/platformio.ini
@@ -14,6 +14,12 @@ board = esp32doit-devkit-v1  # or lolin_d32_pro (Giannis' hardware)
 framework = arduino
 monitor_speed = 115200
 
+; [env:node32s]
+; platform = espressif32
+; board = node32s # steth board
+; framework = arduino
+; monitor_speed = 115200
+
 lib_deps = 
 	bblanchon/ArduinoJson@^6.18.0
 	hieromon/AutoConnect@^1.2.2
